--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
         <div>
           <p>liesselepsch499@gmail.com</p>
           <h4>Linkedin</h4>
-          <img src="qrcode_www.linkedin.com.png">
+          <img src="afbeldingen/qrcode_www.linkedin.com.png">
         </div>
 
         <div>
