--- a/cv.html
+++ b/cv.html
@@ -24,7 +24,7 @@
      <p>Welcome to my Cv</p>
     </div>
         
-    <img src="Cv-LiesseLepsch.jpg">
+    <img src="afbeldingen/Cv-LiesseLepsch.jpg">
         
         <div class="footer">
           <p> Laten we samen de grenzen van digitale creativiteit verkennen!</p>
