--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div class="card">
         <h2>About me</h2>
         <h5> Okt 18, 2023</h5>
-        <img class="img" src="photo_me.png"style="height:400px;"></img>
+        <img class="img" src="afbeldingen/photo_me.png"style="height:400px;"></img>
         <p>Ik ben Liesse Lepsch, een gepassioneerde student met een achtergrond in webdesign en een nieuwe liefde voor programmeren. Mijn creatieve reis begon met het ontwerpen van websites en het vormgeven van digitale ervaringen. </p>
       <p>Na een jaar webdesign ben ik in 2023 de wereld van programmeren ingestapt. Als beginnende programmeur ben ik gefascineerd door de mogelijkheden die code biedt. Van het begrijpen van de bouwstenen van het web tot het creëren van dynamische en interactieve webtoepassingen, mijn doel is om de perfecte mix van vorm en functie te bereiken.</p>
       <p>Wat me onderscheidt, is mijn vermogen om design en ontwikkeling naadloos te integreren. Mijn achtergrond in webdesign stelt me in staat om niet alleen gebruiksvriendelijke interfaces te creëren, maar ook oog te hebben voor visuele esthetiek.</p>
